--- a/style.css
+++ b/style.css
@@ -252,6 +252,11 @@ body {
   background: #f1f4f5;
 }
 
+div#main-wrapper.vc_container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .vc_row[data-vc-full-width] {
   overflow: visible !important;
 }
